--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Boost",
-  "description": "Edit & inject custom JavaScript and CSS per domain - mobile friendly",
+  "description": "Edit & inject custom JavaScript and CSS per-domain - mobile friendly",
   "version": "1.0",
   "icons": {
     "16": "icons/icon16.png",
@@ -13,13 +13,19 @@
   },
   "permissions": [
     "storage",
-    "scripting",
     "tabs"
   ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  }
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "content.js"
+      ],
+      "run_at": "document_start",
+      "all_frames": false
+    }
+  ]
 }
