--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,9 @@
   },
   "permissions": [
     "storage",
-    "tabs"
+    "tabs",
+    "scripting",
+    "activeTab"
   ],
   "content_scripts": [
     {
@@ -26,6 +28,12 @@
       ],
       "run_at": "document_start",
       "all_frames": false
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["*"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
