--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Boost",
-  "description": "Edit & inject custom JavaScript and CSS per domain - mobile friendly",
+  "description": "Boost neo - Custom JavaScript & CSS Injector. Edit & inject custom JavaScript and CSS per domain - mobile friendly",
   "version": "2.4.1",
   "icons": {
     "16": "icons/icon16.png",
